# sumcol

./: Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
src/: lib.rs  main.rs
tests/: cli.rs
