[package]
name = "sumcol"
version = "0.1.0"
edition = "2021"
description = "A command-line tool to sum a column of numbers."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
env_logger = "0.10.1"
log = "0.4.20"
regex = "1.10.2"

[dev-dependencies]
assert_cmd = "1"
predicates = "3"
