[package]
name = "sumcol"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A command-line tool to sum a column of numbers."
keywords = ["sum", "column"]
categories = ["command-line-utilities"]
repository = "https://github.com/devjgm/sumcol"
documentation = "https://docs.rs/crate/sumcol/latest"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
colored = "2.1.0"
env_logger = "0.10.1"
log = "0.4.20"
regex = "1.10.2"

[dev-dependencies]
assert_cmd = "1"
predicates = "3"
