[package]
name = "sumcol"
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A command-line tool to sum a column of numbers."
keywords = ["sum", "column"]
categories = ["command-line-utilities"]
repository = "https://github.com/devjgm/sumcol"
documentation = "https://docs.rs/crate/sumcol/latest"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
fs-err = "2"
colored = "2.1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1.10.2"

[dev-dependencies]
assert_cmd = "1"
predicates = "3"
tempfile = "3"
